Fix the header and navbar spacing

--- a/src/common/Header.module.scss
+++ b/src/common/Header.module.scss
@@ -6,7 +6,8 @@
   align-items: center;
   gap: 1.6rem;
 
-  padding: 1.6rem;
+  padding-inline: 1.6rem;
+  height: 6.4rem;
   margin: 0 -1.6rem;
   border-bottom: 1px solid colors.$neutral-light;
 
