--- a/src/common/Navbar.module.scss
+++ b/src/common/Navbar.module.scss
@@ -9,7 +9,7 @@
   justify-content: space-around;
   align-items: center;
   width: 100%;
-  height: 6.2rem;
+  height: 6.4rem;
 
   margin-inline: -1.6rem;
   list-style: none;
