--- a/src/features/shop/ProductPage.module.scss
+++ b/src/features/shop/ProductPage.module.scss
@@ -4,7 +4,7 @@
 
 .page {
   padding-bottom: 1.6rem;
-  margin-bottom: 6.2rem;
+  margin-bottom: 6.4rem;
 }
 
 .imgBox {
