--- a/src/features/shop/ShopPage.module.scss
+++ b/src/features/shop/ShopPage.module.scss
@@ -3,7 +3,7 @@
 
 .shop {
   padding-bottom: 1.6rem;
-  margin-bottom: 6.2rem;
+  margin-bottom: 6.4rem;
 }
 
 .header {
@@ -13,7 +13,8 @@
 
   gap: 1.6rem;
 
-  padding: 1.6rem;
+  height: 6.4rem;
+  padding-inline: 1.6rem;
   margin: 0 -1.6rem;
   border-bottom: 1px solid colors.$neutral-light;
 
